<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".activities.ChooseCalsses">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimaryDark"
        >
        <com.codex.eduapp.school.helper.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Attendence"
            android:textColor="#FFFFFF"
            android:padding="5dp"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:id="@+id/back"
            android:src="@drawable/arrow_back"/>

    </android.support.v7.widget.Toolbar>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="match_parent">
            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_class"
                android:layout_width="match_parent"
                android:layout_margin="35dp"
                app:ms_hint="@string/chooseclasee"
                android:textColor="#000000"
                android:hint="@string/chooseclasee"
                android:textColorHint="#000000"
                android:layout_height="wrap_content"/>
            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_section"
                android:layout_width="match_parent"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:textColor="#000000"
                android:layout_below="@id/spinner_class"
                app:ms_hint="@string/pleasesection"
                android:hint="@string/pleasesection"
                android:textColorHint="#000000"
                android:layout_height="wrap_content"/>
            <com.codex.eduapp.school.helper.MyTextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                android:layout_margin="35dp"
                android:gravity="center"
                android:textColor="#000000"
                android:id="@+id/choose_date"
                android:text="@string/Pleasedate"
                android:layout_below="@id/spinner_section"/>
            <com.codex.eduapp.school.helper.MyTextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/choose_date"
                android:layout_margin="35dp"
                android:background="@drawable/login"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textSize="17sp"
                android:text="@string/search"
                android:id="@+id/T_search"/>
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>