<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:layout_margin="25dp">

    <ImageView
        android:id="@+id/closeDialogImg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_close_black_24dp"
        android:tint="@color/colorAccent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/closeDialogImg"

        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/smll">


        <com.codex.eduapp.school.helper.MyTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:padding="5dp"
            android:text="@string/derd"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <com.codex.eduapp.school.helper.MyEdittext
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/title"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/bgf"
            android:gravity="center"
            android:hint="@string/Phonenumber"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="#8f8f8f"
            android:textSize="15sp" />

        <com.codex.eduapp.school.helper.MyButton
            android:id="@+id/bt-login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/et_phone"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/login"
            android:backgroundTint="#62B814"
            android:gravity="center"
            android:text="@string/RestPassword"
            android:textColor="#FFFFFF"

            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>